--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </header>
 
     <section class="parallax">
+        <div id="mouse"><img src="src/gif/magicus-magicusnft.gif" style="height: 80px; width: 80px; background: none;"></div>
         <h2 id="text"> Parallax website</h2>
         <img src="src/img/tree-left.png" id="tree-left">
         <img src="src/img/tree-right.png" id="tree-right">
